ADD : Upload photo profil (/inscription) WIP : Endpoint /deconnexion
